<resources>
    <string name="app_name">SPlacement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">SignIn</string>
    <string name="register">Register</string>
    <string name="addUser">Add User</string>
    <string name="Notification">Notification</string>
    <string name="addCompany">Add Company</string>
    <string name="EditNotification">Remove Notification</string>
    <string name="addCollegeInfo">College Info</string>
    <string name="EName">Enter Name</string>
    <string name="EId">Enter ID</string>
    <string name="EPassword">Enter Password</string>
    <string name="AddID">UserID</string>
    <string name="AddUserName">Name</string>
    <string name="AddPassword">Password</string>
    <string name="upload">upload</string>
    <string name="companyName">Company Name</string>
    <string name="companyDescription">Company Description</string>
    <string name="CurrentRequirements">Current Requirements</string>
    <string name="RecruitmentRecord">Recruitment Record past years</string>
    <string name="year2016">2016</string>
    <string name="year2017">2017</string>
    <string name="year2018">2018</string>
    <string name="year2019">2019</string>
    <string name="studentrecruited">Students Recruited</string>
    <string name="selectlogo">select Img</string>
    <string name="cregister">register</string>
    <string name="notification_title">notification title</string>
    <string name="notification_description">notification </string>
    <string name="date">date</string>
    <string name="company_name">company name or company event</string>
    <string name="college_name">college name and address</string>
    <string name="time">time</string>
    <string name="no_of_stud_register">number of students register</string>
    <string name="no_of_stud_placed">number of students placed</string>
    <string name="add_record">Add Record</string>
    <string name="putnotification">Put Notification</string>
    <string name="note_add_college_info">Add record considering overall college.</string>
</resources>
