<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.admin.splacement.AddCollegeInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/note_add_college_info"
            android:textSize="19sp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/noodstdregister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="number"
            android:hint="@string/no_of_stud_register"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/noofstdplaced"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="70dp"
            android:inputType="date"
            android:hint="@string/no_of_stud_placed"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark" />
        <Button
            android:id="@+id/addstdrecord"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="70dp"
            android:hint="@string/add_record"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
