<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.admin.splacement.MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="match_parent">

      <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_marginTop="150dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textColorHint="@color/white"
          android:background="@drawable/edit_text_border"
          android:hint="@string/username"
          />
      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginBottom="25dp"
          android:layout_marginRight="15dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textColorHint="@color/white"
          android:background="@drawable/edit_text_border"
          android:hint="@string/password"
          />
  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_gravity="center"
      android:gravity="center"

      android:layout_height="wrap_content">

      <Button
          android:id="@+id/signIn"
          android:layout_width="120dp"
          android:layout_height="60dp"
          android:background="@drawable/button_border"
          android:layout_marginRight="5dp"
          android:textColor="@color/white"
          android:text="@string/signIn" />
      <Button
          android:id="@+id/register"
          android:layout_width="120dp"
          android:layout_height="60dp"
          android:background="@drawable/button_border"
          android:textColor="@color/white"
          android:text="@string/register" />
  </LinearLayout>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
