<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.admin.splacement.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="match_parent">
        <EditText
            android:id="@+id/addID"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:hint="@string/AddID"
            android:textColor="@color/white"
            android:layout_height="70dp" />
        <EditText
            android:id="@+id/addUserName"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:hint="@string/AddUserName"
            android:layout_height="70dp" />
        <EditText
            android:id="@+id/addPassword"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:hint="@string/AddPassword"
            android:layout_height="70dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/addAUser"
            android:background="@drawable/button_border"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/addUser"
            android:layout_height="70dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
