<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.admin.splacement.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/uniqueId"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_border"
            android:hint="@string/EId"
            />

        <EditText
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_border"
            android:hint="@string/EName"
            />
        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:hint="@string/EPassword"
            android:background="@drawable/edit_text_border"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/signup"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/button_border"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
